Alterações e correções de erros